ingress/hello-world-ingress.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-hello-world
  labels:
    app: docker-hello-world
spec:
  selector:
    matchLabels:
      app: docker-hello-world
  replicas: 3
  template:
    metadata:
      labels:
        app: docker-hello-world
    spec:
      containers:
        - name: docker-hello-world
          image: sa-vinhedo-1.ocir.io/axsowhb0isxx/helloworld:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ocisecret
---
apiVersion: v1
kind: Service
metadata:
  name: docker-hello-world-svc
spec:
  selector:
    app: docker-hello-world
  ports:
    - port: 8088
      targetPort: 80
  type: ClusterIP
